fix eye not completely filling container on firefox

--- a/style.css
+++ b/style.css
@@ -82,8 +82,7 @@
 #eye {
   background-color: red;
   border: none;
-  border-radius: 50px;
-  width: 100%; height: 100%;
+  width: 45px; height: 45px;
 }
 
 #pupil {
